# Qleaner

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  README.md  TODO.md  package.json  qleaner_100_improvements.md  snapcraft.yaml  tasks2.md  todo.mac.md  todo.win.md  update.py  update2.py  update3.py  vite.config.js
.github/workflows/: build.yml  release.yml  snap.yml
docs/: architecture.md  i18n.md  macos_detectors.md  native_desktop.md  readme.md  release.md
messages/: en.json
project.inlang/: project_id
scripts/: build_desktop.sh  build_linux.sh  build_mac.sh  build_win.sh  deploy_website.sh  run_dev_linux.sh  run_dev_mac.sh  run_dev_win.sh
snap/: snapcraft.yaml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cleaner.rs  cli.rs  lib.rs  main.rs
src-tauri/src/cleaner/: commands.rs  db.rs  detectors.rs  error.rs  mod.rs  models.rs  scanner.rs
src/lib/components/ui/: LogTerminal.svelte  (+4 more)
src/lib/stores/: cleaner.svelte.ts  schedules.svelte.ts  settings.svelte.ts  theme.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/about/: +page.svelte
src/routes/donate/: +page.svelte
src/routes/feedback/: +page.svelte
src/routes/heuristics/: +page.svelte
src/routes/history/: +page.svelte
src/routes/rules/: +page.svelte
src/routes/schedules/: +page.svelte
src/routes/settings/: +page.svelte
website/: package.json
website/messages/: en.json  tr.json
website/src/routes/: +layout.svelte  +page.svelte
(+5 files in other folders)
