[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
dangerous-clean = []

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
walkdir = "2.4"
regex = "1.10"
dirs = "5.0"
anyhow = "1"
tracing = "0.1"
tokio = { version = "1.51.1", features = ["full"] }
ignore = "0.4.25"
trash = "5.2.5"
tokio-util = "0.7.18"
thiserror = "2.0.18"
sudo = "0.6.0"
clap = { version = "4.6.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.27.0"
